--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="fb_login_protocol_scheme">fb1873372106151098</string>
     <string name="current_password">Current Password</string>
     <string name="web_client_id">AIzaSyAj1XWl1WRzpO5r6haDzQb6oeK3804OgCg</string>
+    <string name="signup">Signup</string>
 </resources>
