--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="current_password">Current Password</string>
     <string name="web_client_id">AIzaSyAj1XWl1WRzpO5r6haDzQb6oeK3804OgCg</string>
     <string name="signup">Signup</string>
+    <string name="done">Done</string>
 </resources>
