--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="web_client_id">AIzaSyAj1XWl1WRzpO5r6haDzQb6oeK3804OgCg</string>
     <string name="signup">Signup</string>
     <string name="done">Done</string>
+    <string name="snooze">Snooze</string>
 </resources>
